Fix: :bug: Fixing some bugs, adding spacing, testing responsive in mobile devices

--- a/src/app/body/focus-areas/focus-areas.component.css
+++ b/src/app/body/focus-areas/focus-areas.component.css
@@ -6,6 +6,12 @@
   cursor: pointer;
 }
 
+.section-title {
+  font-weight: 600;
+  font-size: 2rem;
+}
+
+
 .focus-card:hover {
   transform: translateY(-8px);
   box-shadow: 0 8px 25px rgba(0,0,0,0.1);
