--- a/src/app/body/news/news.component.css
+++ b/src/app/body/news/news.component.css
@@ -3,9 +3,23 @@
 }
 
 .news-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.carousel-inner,
+.carousel-item {
   height: 400px;
-  object-fit: contain;
-  background-color: #6e6e6e;
+  transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media (max-width: 768px) {
+  .carousel-inner,
+  .carousel-item {
+    height: 250px;
+    transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .news-content {
