--- a/src/app/body/prod-and-serv/prod-and-serv.component.css
+++ b/src/app/body/prod-and-serv/prod-and-serv.component.css
@@ -1,9 +1,7 @@
-section{
-    background: linear-gradient(180deg, #f6ecfa, #ffffff);    
-}
+
 
 .products-section {
-  background: linear-gradient(180deg, #f6ecfa, #ffffff);
+  background-color: #f5f5f5;
 }
 
 .section-title {
@@ -22,19 +20,19 @@ section{
   border-radius: 12px;
   transition: all 0.3s ease;
   cursor: pointer;
-  border-left: 5px solid #c084d4;
+  border-left: 5px solid #925215;
 }
 
 .product-card:hover {
   transform: translateY(-5px);
   box-shadow: 0 12px 25px rgba(0, 0, 0, 0.08);
-  border-left: 5px solid #8e44ad;
+  border-left: 5px solid #66390f;
 }
 
 .product-number {
   font-size: 2.5rem;
   font-weight: 700;
-  color: #d5a3e6;
+  color: #66390f;
   min-width: 50px;
 }
 
